--- a/blog/main/static/main/css/main.css
+++ b/blog/main/static/main/css/main.css
@@ -42,3 +42,8 @@ ul#menu li {
   background-color: #fbd9d8;
   border: thin solid red;
 }
+
+/* Misc */
+.inlineBlock {
+  display: inline-block;
+}
