--- a/blog/article/templates/article/articleSearch.html
+++ b/blog/article/templates/article/articleSearch.html
@@ -1,15 +1,10 @@
-<!doctype html>
+{% extends 'main/base.html' %}
 {% load staticfiles %}
-<html>
-<head>
-<title>部落格</title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+{% block css %}
 <link rel="stylesheet" href="{% static 'article/css/article.css' %}">
-</head>
-<body>
-{% include 'main/menu.html' %}
-<h1>歡迎來到我的部落格</h1>
+{% endblock %}
+{% block heading %}搜尋{% endblock %}
+{% block content %}
 <form class="inlineBlock" action="{% url 'article:articleSearch' %}">
   <input type="text" name="searchTerm" {% if searchTerm %}value="{{ searchTerm }}"{% endif %}>
   <input class="btn" type="submit" value="查詢">
@@ -28,5 +23,4 @@
     {% endfor %}
   </table>
 {% endif %}
-</body>
-</html>
+{% endblock %}
